# tongs

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.agents/architecture/: README.md
.agents/cache/: README.md
.agents/diff/: README.md
.agents/forges/: README.md
.agents/plugins/: README.md
.agents/security/: README.md
.agents/testing/: README.md
.agents/tui/: README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good-first-issue.yml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  getting-started.md  index.md  site-plan.md
docs/guides/: diffs.md  discussions.md  inbox.md  pipelines.md  plugins.md
docs/reference/: configuration.md  keybindings.md
docs/stylesheets/: extra.css
src/tongs/: __init__.py  __main__.py  app.py  commands.py  config.py  errors.py  helpers.py
src/tongs/cache/: cached_client.py  store.py
src/tongs/diff/: models.py  parser.py  position.py
src/tongs/forges/: auth.py  (+6 more)
tests/: test_commands.py  test_config.py  test_errors.py  test_state.py
tests/fixtures/: builder_mr_3113.diff  fromager_pr_1258.diff
tests/test_cache/: test_cached_client.py  test_store.py
tests/test_diff/: test_parser.py  test_position.py
tests/test_forges/: test_auth.py  test_github.py  test_gitlab.py  test_http.py  test_models.py  test_registry.py
tests/test_mcp/: test_server.py
tests/test_plugins/: test_plugin_system.py
tests/test_scanner/: test_discovery.py  test_remote.py
tests/test_views/: test_helpers.py  test_suggestion.py
tests/test_widgets/: test_diff_panel.py  test_discussion_list.py  test_mr_table.py  test_pipeline_panel.py
(+19 files in other folders)
