[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tongs"
dynamic = ["version"]
description = "Multi-forge MR/CI management TUI for GitHub and GitLab"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Andre Motta" },
]
keywords = ["tui", "git", "gitlab", "github", "merge-request", "pull-request", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyperclip>=1.8",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
fleet = ["claude-fleet-monitor>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/andre-motta/tongs"
Documentation = "https://tongs.tools"
Repository = "https://github.com/andre-motta/tongs"
Issues = "https://github.com/andre-motta/tongs/issues"

[project.scripts]
tongs = "tongs.__main__:main"
tongs-mcp = "tongs.mcp.server:main"

[project.entry-points."tongs.plugins"]
mcp = "tongs.mcp.plugin:MCPPlugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/tongs"]
